# srvmon

./: .eslintrc.js  .flaskenv  .gitignore  LICENSE  README.md  jsconfig.json  package-lock.json  package.json  pyproject.toml  run.py  vue.config.js
app/: __init__.py  api.py  celery.py  checkers.py  config.py  cron.py  db.py  logging.py  mail.py  notify.py  security.py  socketio.py  utils.py  validator.py
app/api/: __init__.py  account.py  contact.py  record.py  server.py  validator.py
migrations/versions/: 44179a91a87b_add_indexes.py  57aca8eb8139_init.py  608b679f7b6d_add_mode_field.py  95c8255a3057_add_server_tables.py  ad1f704412f4_add_record_message.py  c7d8b1ffb496_add_last_checked.py
public/: index.html
src/: App.vue  main.js
src/components/: ChangePasswordForm.vue  NavDrawer.vue  StatusIndicator.vue  UserControl.vue
src/plugins/: axios.js  luxon.js  notification.js  socket.js
src/router/: index.js
src/store/: index.js
src/views/: AddContact.vue  AddServer.vue  Contacts.vue  Login.vue  Server.vue  Servers.vue  Settings.vue
tests/: .flaskenv  conftest.py  test_checkers.py  test_contacts.py  test_notify.py  test_servers.py  test_spa.py
